vertical align issue

--- a/skin/frontend/default/newrespondf/css/iphone.css
+++ b/skin/frontend/default/newrespondf/css/iphone.css
@@ -851,7 +851,7 @@ li {
     font-size: 19px;
     font-weight: normal;
     letter-spacing: 1px;
-    line-height: 45px;
+    line-height: 48px;
     text-transform: uppercase;
     vertical-align: middle;
 }
@@ -969,7 +969,7 @@ ul {
     font-family: ITCAvantGardeStd-Bk;
     font-size: 14px;
     height: 44px;
-    line-height: 44px;
+    line-height: 50px;
     text-transform: uppercase;
     width: 50%;
 }
@@ -1319,14 +1319,14 @@ ul {
 .gender-link .f-right div label.f1:before {
     color: #fff;
     content: "M";
-    font: 17px/44px ITCAvantGardeStd-Bk;
+    font: 17px/48px ITCAvantGardeStd-Bk;
     text-align: center;
 }
 
 .gender-link .f-right div label.f2:before {
     color: #fff;
     content: "F";
-    font: 17px/44px ITCAvantGardeStd-Bk;
+    font: 17px/48px ITCAvantGardeStd-Bk;
     text-align: center;
 }
 
